--- a/frontend/src/pages/Gabarito/components/ScannerModal.css
+++ b/frontend/src/pages/Gabarito/components/ScannerModal.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2000;
+    z-index: 3000;
 }
 
 .scanner-container {
